pds: avoid URL constructors
URL constructors are deprecated at Java 20.  Rework the APIs a bit
so that (less problematic) URIs are used instead of URLs to identify
the location context in PDS4 labels.