@@ -4,6 +4,7 @@ import gov.nasa.pds.label.object.FieldType;
 import java.io.BufferedInputStream;
 import java.io.IOException;
 import java.io.InputStream;
+import java.net.URI;
 import java.net.URL;
 import uk.ac.starlink.table.AbstractStarTable;
 import uk.ac.starlink.table.ColumnInfo;
@@ -35,11 +36,11 @@ public abstract class Pds4StarTable extends AbstractStarTable {
      * Constructor.
      *
      * @param  table  table object on which this table is based
-     * @param  contextUrl   parent URL for the PDS4 label
+     * @param  contextUri   parent URI for the PDS4 label
      */
     @SuppressWarnings("this-escape")
-    protected Pds4StarTable( Table table, URL contextUrl ) throws IOException {
-        dataUrl_ = new URL( contextUrl, table.getFileName() );
+    protected Pds4StarTable( Table table, URI contextUri ) throws IOException {
+        dataUrl_ = contextUri.resolve( table.getFileName() ).toURL();
         dataOffset_ = table.getOffset();
         nrow_ = table.getRecordCount();
         String name = table.getName();
